Product cards fixed alignment bottom

--- a/css/style.css
+++ b/css/style.css
@@ -65,12 +65,16 @@ body {
   border-radius: 15px;
   padding: 10px 60px;
   display: flex;
-  height: auto;
-  overflow: auto;
   flex-wrap: wrap;
   align-items: start;
-  justify-content: space-between;
-  position: relative;
+  justify-content: center;
+}
+
+.product-card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  width: 100%;
 }
 
 .product-card {
@@ -78,7 +82,6 @@ body {
   padding: 10px;
   margin: 10px;
   background-color: var(--color-dark);
-  align-self: flex-start;
 }
 
 .product-card img {
